--- a/static/admin.html
+++ b/static/admin.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MovieVerse API</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            margin-top: 50px;
+            margin-top: 20px;
         }
         button, input, textarea {
             margin: 10px;
@@ -57,10 +57,47 @@
         #response-table tr:nth-child(even) {
             background-color: #f9f9f9;
         }
+        /* Admin Chat Panel Styles */
+        #active-chats-container {
+            margin: 20px auto;
+            max-width: 80%;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            padding: 10px;
+            box-shadow: 0px 0px 10px #ddd;
+        }
+        #active-chats-table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        #active-chats-table th, #active-chats-table td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+        #active-chats-table th {
+            background-color: #f4f4f4;
+        }
+        #chat-interface {
+            display: none;
+            margin: 20px auto;
+            max-width: 80%;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0px 0px 10px #ddd;
+            text-align: left;
+        }
+        #chat-box-admin {
+            border: 1px solid #ccc;
+            height: 300px;
+            overflow-y: scroll;
+            padding: 10px;
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body>
-
 <h1>MovieVerse API Operations</h1>
 
 <h2>Movies</h2>
@@ -77,33 +114,33 @@
 <h3>Get Movie by ID</h3>
 <form id="getMovieByIDForm" onsubmit="getMovieByID(event)">
     <label for="movieID">Movie ID:</label>
-    <input type="text" id="movieID" name="movieID" required>
+    <input type="text" id="movieID" name="movieID" required />
     <button type="submit">Get Movie</button>
 </form>
 
 <h3>Delete Movie</h3>
 <form id="deleteMovieForm" onsubmit="deleteMovie(event)">
     <label for="deleteMovieID">Movie ID:</label>
-    <input type="text" id="deleteMovieID" name="deleteMovieID" required>
+    <input type="text" id="deleteMovieID" name="deleteMovieID" required />
     <button type="submit">Delete Movie</button>
 </form>
 
 <h3>Create Movie</h3>
 <form id="createMovieForm" onsubmit="createMovie(event)">
     <label for="title">Title:</label>
-    <input type="text" id="title" name="title" required>
+    <input type="text" id="title" name="title" required />
 
     <label for="director">Director:</label>
-    <input type="text" id="director" name="director" required>
+    <input type="text" id="director" name="director" required />
 
     <label for="country">Country:</label>
-    <input type="text" id="country" name="country" required>
+    <input type="text" id="country" name="country" required />
 
     <label for="genres">Genres (comma-separated):</label>
-    <input type="text" id="genres" name="genres" required>
+    <input type="text" id="genres" name="genres" required />
 
     <label for="releaseYear">Release Year:</label>
-    <input type="number" id="releaseYear" name="releaseYear" required>
+    <input type="number" id="releaseYear" name="releaseYear" required />
 
     <label for="description">Description:</label>
     <textarea id="description" name="description" rows="3" required></textarea>
@@ -112,140 +149,231 @@
 </form>
 
 <h2>Users</h2>
-
 <button onclick="getAllUsers()">Get All Users</button>
 
 <h3>Get User by ID</h3>
 <form id="getUserByIDForm" onsubmit="getUserByID(event)">
     <label for="userID">User ID:</label>
-    <input type="text" id="userID" name="userID" required>
+    <input type="text" id="userID" name="userID" required />
     <button type="submit">Get User</button>
 </form>
 
 <h3>Delete User</h3>
 <form id="deleteUserForm" onsubmit="deleteUser(event)">
     <label for="deleteUserID">User ID:</label>
-    <input type="text" id="deleteUserID" name="deleteUserID" required>
+    <input type="text" id="deleteUserID" name="deleteUserID" required />
     <button type="submit">Delete User</button>
 </form>
 
+<section id="active-chats-container">
+    <h2>Active Client Chats</h2>
+    <table id="active-chats-table">
+        <thead>
+        <tr>
+            <th>Chat ID</th>
+            <th>Client</th>
+            <th>Started At</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody id="active-chats-body">
+        </tbody>
+    </table>
+</section>
 
+<section id="chat-interface">
+    <h3>Chat Session: <span id="chat-session-id"></span></h3>
+    <div id="chat-box-admin"></div>
+    <input type="text" id="admin-chat-message" placeholder="Type a message..." />
+    <button id="admin-send-button">Send</button>
+    <button id="close-chat-button">Close Chat</button>
+</section>
 
 <script>
     const apiUrl = 'http://localhost:8080';
+    let adminSocket = null;
+    let currentChatID = null;
 
-    const showResponse = (response) => {
-        const responseBody = document.getElementById('response-body');
-        responseBody.innerHTML = "";
-
-        if (Array.isArray(response)) {
-
-            const headerRow = document.createElement('tr');
-            if (response.length > 0) {
-                const firstItem = response[0];
-                for (const key in firstItem) {
-                    const th = document.createElement('th');
-                    th.textContent = key;
-                    headerRow.appendChild(th);
-                }
-                responseBody.appendChild(headerRow);
-
-                response.forEach(item => {
-                    const row = document.createElement('tr');
-                    for (const key in item) {
-                        const cell = document.createElement('td');
-                        const value = Array.isArray(item[key]) ? item[key].join(", ") : item[key];
-                        cell.textContent = value;
-                        row.appendChild(cell);
-                    }
-                    responseBody.appendChild(row);
-                });
-            }
-        } else {
-            const headerRow = document.createElement('tr');
-            for (const key in response) {
-                const th = document.createElement('th');
-                th.textContent = key;
-                headerRow.appendChild(th);
-            }
-            responseBody.appendChild(headerRow);
-
-            const row = document.createElement('tr');
-            for (const key in response) {
-                const cell = document.createElement('td');
-                const value = Array.isArray(response[key]) ? response[key].join(", ") : response[key];
-                cell.textContent = value;
-                row.appendChild(cell);
-            }
-            responseBody.appendChild(row);
+    // Connect to a chat session via WebSocket and load its history.
+    function joinChat(chatID) {
+        currentChatID = chatID;
+        document.getElementById("chat-session-id").textContent = chatID;
+        document.getElementById("chat-interface").style.display = "block";
+        localStorage.setItem("admin_chat_id", chatID);
+        if (adminSocket) {
+            adminSocket.close();
         }
-    };
-
-    function getMovies() {
-        fetch(`${apiUrl}/movies`)
-            .then(res => res.json())
-            .then(showResponse)
-            .catch(console.error);
-    }
-
-    function getMovieByID(event) {
-        event.preventDefault();
-        const id = document.getElementById("movieID").value;
-        fetch(`${apiUrl}/movies?id=${id}`)
-            .then(res => res.json())
-            .then(showResponse)
-            .catch(console.error);
-    }
-
-    function createMovie(event) {
-        event.preventDefault();
-        const formData = {
-            title: document.getElementById("title").value,
-            director: document.getElementById("director").value,
-            country: document.getElementById("country").value,
-            genres: document.getElementById("genres").value.split(","),
-            release_year: parseInt(document.getElementById("releaseYear").value),
-            description: document.getElementById("description").value,
+        adminSocket = new WebSocket(apiUrl + "/ws?chat_id=" + chatID);
+        adminSocket.onopen = function() {
+            console.log("Admin connected to chat session:", chatID);
+            loadChatHistory(chatID);
         };
+        adminSocket.onmessage = function(event) {
+            const message = JSON.parse(event.data);
+            appendAdminMessage(message);
+        };
+        adminSocket.onerror = function(error) {
+            console.error("Admin WebSocket error:", error);
+        };
+        adminSocket.onclose = function() {
+            console.log("Admin WebSocket connection closed.");
+        };
+    }
 
-        fetch(`${apiUrl}/movies`, {
+    // Load chat history from the backend for the given chatID.
+    function loadChatHistory(chatID) {
+        fetch(apiUrl + "/chat-history?chat_id=" + chatID, {
+            headers: { "Authorization": "Bearer " + localStorage.getItem("userToken") }
+        })
+            .then(res => res.json())
+            .then(history => {
+                console.log("Chat history loaded:", history);
+                const chatBox = document.getElementById("chat-box-admin");
+                chatBox.innerHTML = ""; // Clear previous messages.
+                history.forEach(msg => {
+                    // Adjust property names based on your models.
+                    const ts = new Date(msg.Timestamp);
+                    const newMessage = document.createElement("div");
+                    newMessage.textContent = `[${ts.toLocaleString()}] ${msg.Sender}: ${msg.Content}`;
+                    chatBox.appendChild(newMessage);
+                });
+                chatBox.scrollTop = chatBox.scrollHeight;
+            })
+            .catch(err => console.error("Error loading chat history:", err));
+    }
+
+    // Append a single message to the admin chat box.
+    function appendAdminMessage(message) {
+        const chatBox = document.getElementById("chat-box-admin");
+        const msgDiv = document.createElement("div");
+        msgDiv.textContent = `[${message.timestamp}] ${message.username}: ${message.content}`;
+        chatBox.appendChild(msgDiv);
+        chatBox.scrollTop = chatBox.scrollHeight;
+    }
+
+    // Fetch active chat sessions from the backend.
+    function getActiveChats() {
+        fetch(apiUrl + "/admin/active-chats", {
+            headers: { "Authorization": "Bearer " + localStorage.getItem("userToken") }
+        })
+            .then(res => res.json())
+            .then(chats => {
+                console.log("Active chats:", chats);
+                const tbody = document.getElementById("active-chats-body");
+                tbody.innerHTML = "";
+                if (chats.length === 0) {
+                    tbody.innerHTML = "<tr><td colspan='4'>No active chats</td></tr>";
+                    return;
+                }
+                chats.forEach(chat => {
+                    const tr = document.createElement("tr");
+                    tr.innerHTML = `
+          <td>${chat.chat_id}</td>
+          <td>${chat.client}</td>
+          <td>${chat.started_at}</td>
+          <td>
+            <button onclick="joinChat('${chat.chat_id}')">Join Chat</button>
+            <button onclick="closeChat('${chat.chat_id}')">Close Chat</button>
+          </td>
+        `;
+                    tbody.appendChild(tr);
+                });
+            })
+            .catch(err => console.error("Error fetching active chats:", err));
+    }
+
+    // Close a chat session.
+    function closeChat(chatID) {
+        if (!chatID) return;
+        fetch(apiUrl + "/close-chat?chat_id=" + chatID, {
             method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify(formData),
-        }).then(res => res.json()).then(showResponse).catch(console.error);
+            headers: { "Authorization": "Bearer " + localStorage.getItem("userToken") }
+        })
+            .then(res => res.text())
+            .then(response => {
+                alert("Chat closed: " + response);
+                if (adminSocket) {
+                    adminSocket.close();
+                    adminSocket = null;
+                }
+                document.getElementById("chat-interface").style.display = "none";
+                localStorage.removeItem("admin_chat_id");
+                currentChatID = null;
+                getActiveChats();
+            })
+            .catch(err => {
+                console.error("Error closing chat:", err);
+                alert("Failed to close chat.");
+            });
     }
 
-    function deleteMovie(event) {
-        event.preventDefault();
-        const id = document.getElementById("deleteMovieID").value;
-        fetch(`${apiUrl}/movies?id=${id}`, {
-            method: "DELETE",
-        }).then(res => res.json()).then(showResponse).catch(console.error);
-    }
+    // On DOMContentLoaded, set up token handling, active chats, and auto-reconnect.
+    document.addEventListener("DOMContentLoaded", () => {
+        const params = new URLSearchParams(window.location.search);
+        const token = params.get("token");
+        if (token) {
+            localStorage.setItem("userToken", token);
+        } else {
+            alert("Token missing or expired. Redirecting to login...");
+            window.location.href = "/login.html";
+            return;
+        }
+        // Fetch active chats initially.
+        getActiveChats();
+        // Auto-join admin chat session if one was persisted.
+        let storedChatID = localStorage.getItem("admin_chat_id");
+        if (storedChatID) {
+            joinChat(storedChatID);
+        }
+        // Attach send button listener.
+        document.getElementById("admin-send-button").addEventListener("click", () => {
+            const input = document.getElementById("admin-chat-message");
+            const content = input.value.trim();
+            if (!content) return;
+            if (!adminSocket || adminSocket.readyState !== WebSocket.OPEN) {
+                console.log("Admin WebSocket not open; cannot send message.");
+                return;
+            }
+            const msg = {
+                chat_id: currentChatID,
+                username: "Admin", // Replace with actual admin username if available.
+                content: content,
+                timestamp: "" // Server adds timestamp.
+            };
+            adminSocket.send(JSON.stringify(msg));
+            input.value = "";
+        });
+        document.getElementById("admin-chat-message").addEventListener("keypress", function(e) {
+            if (e.key === "Enter") {
+                document.getElementById("admin-send-button").click();
+            }
+        });
+        // Refresh active chats every 10 seconds.
+        setInterval(getActiveChats, 10000);
+    });
 
-    function getAllUsers() {
-        fetch(`${apiUrl}/users`)
-            .then(res => res.json())
-            .then(showResponse)
-            .catch(console.error);
-    }
-
-    function getUserByID(event) {
-        event.preventDefault();
-        const id = document.getElementById("userID").value;
-        fetch(`${apiUrl}/users?id=${id}`)
-            .then(res => res.json())
-            .then(showResponse)
-            .catch(console.error);
-    }
-
-    function deleteUser(event) {
-        event.preventDefault();
-        const id = document.getElementById("deleteUserID").value;
-        fetch(`${apiUrl}/users?id=${id}`, {
-            method: "DELETE",
-        }).then(res => res.json()).then(showResponse).catch(console.error);
+    async function handleLogout() {
+        try {
+            const response = await fetch(apiUrl + "/logout", {
+                method: "POST",
+                headers: {
+                    "Authorization": "Bearer " + localStorage.getItem("userToken")
+                }
+            });
+            if (response.ok) {
+                localStorage.removeItem("userToken");
+                localStorage.removeItem("admin_chat_id");
+                alert("You have been logged out.");
+                window.location.href = "login.html";
+            } else {
+                alert("Logout failed: " + response.statusText);
+            }
+        } catch (error) {
+            console.error("Error during logout:", error);
+            alert("Logout failed. Please try again.");
+        }
     }
 </script>
+
 </body>
-</html> 
+</html>
