--- a/static/index.html
+++ b/static/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MovieVerse</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -20,6 +20,7 @@
             align-items: center;
             justify-content: center;
             text-align: center;
+            position: relative;
         }
         .banner-overlay {
             background-color: rgba(0, 0, 0, 0.6);
@@ -33,6 +34,13 @@
             position: relative;
             z-index: 1;
         }
+        /* Chat styles */
+        #chat-box {
+            height: 300px;
+            overflow-y: scroll;
+            background-color: #f8f9fa;
+            color: #000;
+        }
     </style>
 </head>
 <body>
@@ -42,7 +50,7 @@
             <a class="navbar-brand fw-bold" href="index.html">MovieVerse</a>
             <div class="navbar-collapse" id="navbarNav">
                 <form class="me-3 mx-auto" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
+                    <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search" />
                 </form>
                 <button class="btn btn-outline-light" type="submit">Search</button>
                 <a href="#" class="btn btn-outline-light ms-2" id="logoutButton" onclick="handleLogout()">Log Out</a>
@@ -50,102 +58,161 @@
         </div>
     </nav>
 </header>
-    <section class="banner position-relative">
-        <div class="banner-overlay"></div>
-        <div class="banner-content text-center text-white p-5">
-            <h1 class="display-3 p-5">Featured TV Show of the Week</h1>
-            <p class="lead">Catch the latest hit TV Show now streaming!</p>
-            <a href="movies/dark.html" class="btn btn-primary btn-lg">Watch Now</a>
-        </div>
-    </section>
-    <section>
-        <div class="container p-4">
-            <h2 class="text-black">Trending Movies & TV Shows</h2>
-            <div class="row g-2">
-                <div class="col-sm-6 col-md-4 col-lg-2 ">
-                    <div class="card bg-secondary p-1 movie ">
-                        <a href="movies/taxidriver.html" class="text-decoration-none text-black">
-                            <img src="static/pics/movie1.png" class="card-img-top" alt="Taxi Driver">
-                            <div class="card-text text-center">Taxi Driver</div>
-                        </a>
-                    </div>
+<section class="banner">
+    <div class="banner-overlay"></div>
+    <div class="banner-content text-center text-white p-5">
+        <h1 class="display-3 p-5">Featured TV Show of the Week</h1>
+        <p class="lead">Catch the latest hit TV Show now streaming!</p>
+        <a href="movies/dark.html" class="btn btn-primary btn-lg">Watch Now</a>
+    </div>
+</section>
+<section>
+    <div class="container mt-5">
+        <h3 class="text-black">Live Chat</h3>
+        <div id="chat-box" class="border p-3"></div>
+        <input type="text" id="chat-message" class="form-control mt-2" placeholder="Type a message..." />
+        <button id="send-button" class="btn btn-primary mt-2">Send</button>
+    </div>
+    <div class="container p-4">
+        <h2 class="text-black">Trending Movies & TV Shows</h2>
+        <div class="row g-2">
+            <div class="col-sm-6 col-md-4 col-lg-2">
+                <div class="card bg-secondary p-1 movie">
+                    <a href="movies/taxidriver.html" class="text-decoration-none text-black">
+                        <img src="static/pics/movie1.png" class="card-img-top" alt="Taxi Driver" />
+                        <div class="card-text text-center">Taxi Driver</div>
+                    </a>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-2">
-                    <div class="card bg-secondary p-1 movie ">
-                        <a href="movies/parasite.html" class="text-decoration-none text-black">
-                            <img src="static/pics/movie2.png" class="card-img-top" alt="Parasite">
-                            <div class="card-text text-center">Parasite</div>
-                        </a>
-                    </div>
-
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-2">
+                <div class="card bg-secondary p-1 movie">
+                    <a href="movies/parasite.html" class="text-decoration-none text-black">
+                        <img src="static/pics/movie2.png" class="card-img-top" alt="Parasite" />
+                        <div class="card-text text-center">Parasite</div>
+                    </a>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-2">
-                    <div class="card bg-secondary p-1 movie ">
-                        <a href="movies/breakingbad.html" class="text-decoration-none text-black">
-                            <img src="static/pics/movie3.png" class="card-img-top" alt="Breaking Bad">
-                            <div class="card-text text-center">Breaking Bad</div>
-                        </a>
-                    </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-2">
+                <div class="card bg-secondary p-1 movie">
+                    <a href="movies/breakingbad.html" class="text-decoration-none text-black">
+                        <img src="static/pics/movie3.png" class="card-img-top" alt="Breaking Bad" />
+                        <div class="card-text text-center">Breaking Bad</div>
+                    </a>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-2">
-                    <div class="card bg-secondary p-1 movie ">
-                        <a href="movies/dark.html" class="text-decoration-none text-black">
-                            <img src="static/pics/movie4.png" class="card-img-top" alt="Dark">
-                            <div class="card-text text-center">Dark</div>
-                        </a>
-                    </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-2">
+                <div class="card bg-secondary p-1 movie">
+                    <a href="movies/dark.html" class="text-decoration-none text-black">
+                        <img src="static/pics/movie4.png" class="card-img-top" alt="Dark" />
+                        <div class="card-text text-center">Dark</div>
+                    </a>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-2">
-                    <div class="card bg-secondary p-1 movie ">
-                        <a href="movies/bojack.html" class="text-decoration-none text-black">
-                            <img src="static/pics/movie5.png" class="card-img-top" alt="Bojack">
-                            <div class="card-text text-center">Bojack Horseman</div>
-                        </a>
-                    </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-2">
+                <div class="card bg-secondary p-1 movie">
+                    <a href="movies/bojack.html" class="text-decoration-none text-black">
+                        <img src="static/pics/movie5.png" class="card-img-top" alt="Bojack" />
+                        <div class="card-text text-center">Bojack Horseman</div>
+                    </a>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-2">
-                    <div class="card bg-secondary p-1 movie ">
-                        <a href="movies/harakiri.html" class="text-decoration-none text-black">
-                            <img src="static/pics/movie6.png" class="card-img-top" alt="Harakiri">
-                            <div class="card-text text-center">Harakiri</div>
-                        </a>
-                    </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-2">
+                <div class="card bg-secondary p-1 movie">
+                    <a href="movies/harakiri.html" class="text-decoration-none text-black">
+                        <img src="static/pics/movie6.png" class="card-img-top" alt="Harakiri" />
+                        <div class="card-text text-center">Harakiri</div>
+                    </a>
                 </div>
             </div>
         </div>
-    </section>
-    <section>
-        <div class="container p-4">
-            <h2 class="text-black">New Releases</h2>
-            <div class="row g-2">
-                <div class="col-sm-6 col-md-4 col-lg-2 ">
-                    <div class="card bg-secondary p-1 movie ">
-                        <a href="movies/beef.html" class="text-decoration-none text-black">
-                            <img src="static/pics/movie7.png" class="card-img-top" alt="Beef">
-                            <div class="card-text text-center">Beef</div>
-                        </a>
-                    </div>
+    </div>
+</section>
+<section>
+    <div class="container p-4">
+        <h2 class="text-black">New Releases</h2>
+        <div class="row g-2">
+            <div class="col-sm-6 col-md-4 col-lg-2">
+                <div class="card bg-secondary p-1 movie">
+                    <a href="movies/beef.html" class="text-decoration-none text-black">
+                        <img src="static/pics/movie7.png" class="card-img-top" alt="Beef" />
+                        <div class="card-text text-center">Beef</div>
+                    </a>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-2">
-                    <div class="card bg-secondary p-1 movie ">
-                        <a href="movies/skin.html" class="text-decoration-none text-black">
-                            <img src="static/pics/movie8.png" class="card-img-top" alt="Skin">
-                            <div class="card-text text-center">The Skin I Live in</div>
-                        </a>
-                    </div>
-
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-2">
+                <div class="card bg-secondary p-1 movie">
+                    <a href="movies/skin.html" class="text-decoration-none text-black">
+                        <img src="static/pics/movie8.png" class="card-img-top" alt="Skin" />
+                        <div class="card-text text-center">The Skin I Live in</div>
+                    </a>
                 </div>
             </div>
         </div>
-    </section>
-    <footer class="bg-dark py-3">
-        <div class="text-center text-decoration-none text-white">
-            <p>&COPY;MovieVerse</p>
-            <a class="text-decoration-none text-white" href="https://t.me/userd0666"><i class="fab fa-telegram"></i>Telegram</a>
-        </div>
-    </footer>
+    </div>
+</section>
+<footer class="bg-dark py-3">
+    <div class="text-center text-decoration-none text-white">
+        <p>&COPY;MovieVerse</p>
+        <a class="text-decoration-none text-white" href="https://t.me/userd0666">
+            <i class="fab fa-telegram"></i>Telegram
+        </a>
+    </div>
+</footer>
 <script>
-    document.addEventListener('DOMContentLoaded', () => {
+    let ws;
+    // Connect to WebSocket with given chatID and load chat history once connected.
+    function connectWebSocket(chatID) {
+        console.log("Connecting with chatID:", chatID);
+        ws = new WebSocket("ws://localhost:8080/ws?chat_id=" + chatID);
+        ws.onopen = function () {
+            console.log("Connected to chat session: " + chatID);
+            loadChatHistory(chatID);
+        };
+        ws.onmessage = function (event) {
+            const message = JSON.parse(event.data);
+            displayMessage(message);
+        };
+        ws.onerror = function (error) {
+            console.error("WebSocket error:", error);
+        };
+        ws.onclose = function () {
+            console.log("WebSocket connection closed.");
+        };
+    }
+
+    // Append a single message to the chat box.
+    function displayMessage(message) {
+        const chatBox = document.getElementById("chat-box");
+        const newMessage = document.createElement("div");
+        newMessage.textContent = `[${message.timestamp}] ${message.username}: ${message.content}`;
+        chatBox.appendChild(newMessage);
+        chatBox.scrollTop = chatBox.scrollHeight;
+    }
+
+    // Load the chat history from the backend.
+    function loadChatHistory(chatID) {
+        fetch("/chat-history?chat_id=" + chatID, {
+            headers: { "Authorization": "Bearer " + localStorage.getItem("userToken") }
+        })
+            .then(res => res.json())
+            .then(history => {
+                console.log("Chat history:", history);
+                const chatBox = document.getElementById("chat-box");
+                chatBox.innerHTML = "";
+                history.forEach(msg => {
+                    // Adjust field names if necessary.
+                    const ts = new Date(msg.Timestamp);
+                    const newMessage = document.createElement("div");
+                    newMessage.textContent = `[${ts.toLocaleString()}] ${msg.Sender}: ${msg.Content}`;
+                    chatBox.appendChild(newMessage);
+                });
+                chatBox.scrollTop = chatBox.scrollHeight;
+            })
+            .catch(err => console.error("Error loading chat history:", err));
+    }
+
+    document.addEventListener("DOMContentLoaded", () => {
+        // Token handling.
         const params = new URLSearchParams(window.location.search);
         const token = params.get("token");
         if (token) {
@@ -153,7 +220,64 @@
         } else {
             alert("Token missing or expired. Redirecting to login...");
             window.location.href = "/login.html";
+            return;
         }
+
+        // Persist chat session using localStorage.
+        let chatID = localStorage.getItem("chat_id");
+        console.log("Found chatID in localStorage:", chatID);
+        if (!chatID) {
+            // Call /start-chat endpoint if no session ID exists.
+            fetch("/start-chat", {
+                method: "GET",
+                headers: { "Authorization": "Bearer " + localStorage.getItem("userToken") }
+            })
+                .then(res => res.json())
+                .then(session => {
+                    if (!session.ID) {
+                        console.error("No session ID returned from /start-chat");
+                        return;
+                    }
+                    chatID = session.ID.toString();
+                    localStorage.setItem("chat_id", chatID);
+                    // Update URL with chat_id.
+                    const newUrl = new URL(window.location.href);
+                    newUrl.searchParams.set("chat_id", chatID);
+                    window.history.replaceState({}, "", newUrl.toString());
+                    connectWebSocket(chatID);
+                })
+                .catch(err => {
+                    console.error("Error starting chat session:", err);
+                });
+        } else {
+            connectWebSocket(chatID);
+        }
+
+        // Send button event listener.
+        document.getElementById("send-button").addEventListener("click", () => {
+            const input = document.getElementById("chat-message");
+            const content = input.value.trim();
+            if (!content) return;
+            if (!ws || ws.readyState !== WebSocket.OPEN) {
+                console.log("WebSocket is not open; cannot send message.");
+                return;
+            }
+            const message = {
+                chat_id: chatID,
+                username: "User", // Replace with actual username if available.
+                content: content,
+                timestamp: "" // Server will add timestamp.
+            };
+            ws.send(JSON.stringify(message));
+            input.value = "";
+        });
+
+        // Also send on Enter key press.
+        document.getElementById("chat-message").addEventListener("keypress", function (e) {
+            if (e.key === "Enter") {
+                document.getElementById("send-button").click();
+            }
+        });
     });
 
     async function handleLogout() {
@@ -161,26 +285,22 @@
             const response = await fetch("/logout", {
                 method: "POST",
                 headers: {
-                    "Authorization": "Bearer " + localStorage.getItem("userToken"),
-                },
+                    "Authorization": "Bearer " + localStorage.getItem("userToken")
+                }
             });
-
             if (response.ok) {
-                // Clear token from localStorage
-                localStorage.removeItem('userToken');
-                alert('You have been logged out.');
-                window.location.href = 'login.html';
+                localStorage.removeItem("userToken");
+                localStorage.removeItem("chat_id");
+                alert("You have been logged out.");
+                window.location.href = "login.html";
             } else {
-                alert('Logout failed: ' + response.statusText);
+                alert("Logout failed: " + response.statusText);
             }
         } catch (error) {
             console.error("Error during logout:", error);
             alert("Logout failed. Please try again.");
         }
     }
-
-
 </script>
-
 </body>
 </html>
